--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: geosapi
 Type: Package
 Title: Geoserver REST API R Interface
 Version: 0.1
-Date: 2016-12-19
+Date: 2016-12-28
 Author: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Description: Geoserver REST API R Interface
-Depends: R (>= 3.0.0)
-Imports: R6, openssl, httr
+Depends: R (>= 3.1.0)
+Imports: R6, openssl, httr, xml2 (>= 1.0)
 Suggests: testthat, roxygen2
 License: MIT + file LICENSE
