--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(GSNamespaceManager)
 export(GSUtils)
 export(GSWorkspace)
 export(GSWorkspaceManager)
+import(XML)
 import(httr)
-import(xml2)
 importFrom(R6,R6Class)
 importFrom(openssl,base64_encode)
