improve XML encoding/decoding strategy + GSShapefileDatastore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(GSDataStoreManager)
 export(GSManager)
 export(GSNamespace)
 export(GSNamespaceManager)
+export(GSRESTResource)
+export(GSShapefileDataStore)
 export(GSUtils)
 export(GSWorkspace)
 export(GSWorkspaceManager)
