provide GS* generic XML encoder, + 1st support of GSResource & GSFeatureType

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,15 @@ Package: geosapi
 Type: Package
 Title: Geoserver REST API R Interface
 Version: 0.1
-Date: 2017-01-04
+Date: 2017-01-19
 Author: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
-Description: Geoserver REST API R Interface
+Description: Provides an R interface to the Geoserver REST API.
 Depends: R (>= 3.1.0)
 Imports: R6, openssl, httr, XML
 Suggests: testthat, roxygen2
 License: MIT + file LICENSE
+VignetteBuilder: knitr
+URL: https://github.com/eblondel/geosapi, http://geoserver.org/
+BugReports: https://github.com/eblondel/geosapi/issues
+LazyLoad: yes
