CRUD methods for layer, publishLayer, unpublishLayer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(GSDataStore)
 export(GSDataStoreManager)
 export(GSFeatureType)
+export(GSLayer)
 export(GSManager)
 export(GSNamespace)
 export(GSNamespaceManager)
