#11 support for GSVersion (combined web/REST approaches to fetch version from past versions)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(GSRESTResource)
 export(GSResource)
 export(GSShapefileDataStore)
 export(GSUtils)
+export(GSVersion)
 export(GSWorkspace)
 export(GSWorkspaceManager)
 import(XML)
