#5 support for GS resource metadataLinks info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GSDataStoreManager)
 export(GSFeatureType)
 export(GSLayer)
 export(GSManager)
+export(GSMetadataLink)
 export(GSNamespace)
 export(GSNamespaceManager)
 export(GSRESTEntrySet)
