--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(GSRESTEntrySet)
 export(GSRESTResource)
 export(GSResource)
 export(GSShapefileDataStore)
+export(GSStyle)
 export(GSUtils)
 export(GSVersion)
 export(GSWorkspace)
