#13 CRUD operations for styles + getSLDBody method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(GSRESTResource)
 export(GSResource)
 export(GSShapefileDataStore)
 export(GSStyle)
+export(GSStyleManager)
 export(GSUtils)
 export(GSVersion)
 export(GSWorkspace)
