--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: geosapi
 Type: Package
 Title: Geoserver REST API R Interface
-Version: 0.1
+Version: 0.1-0
 Date: 2017-02-14
 Author: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
