remove vignette builder

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,8 @@ Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Description: Provides an R interface to the Geoserver REST API.
 Depends: R (>= 3.1.0)
 Imports: R6, openssl, httr, XML
-Suggests: testthat, roxygen2, knitr
+Suggests: testthat, roxygen2
 License: MIT + file LICENSE
-VignetteBuilder: knitr
 URL: https://github.com/eblondel/geosapi/wiki, http://geoserver.org/
 BugReports: https://github.com/eblondel/geosapi/issues
 LazyLoad: yes
