--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services:
   - docker
 
 before_install:
-  - docker pull kartoza/geoserver
-  - docker run --name "geoserver" -p 8080:8080 -d -t kartoza/geoserver
+  - docker pull oscarfonts/geoserver
+  - docker run -d -p 8080:8080 -v /path/to/local/data_dir:/var/local/geoserver --name=geoserver oscarfonts/geoserver
 
 r:
   - oldrel
