--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_install:
   - docker pull oscarfonts/geoserver
-  - docker run -d -p 8080:8080 -v /path/to/local/data_dir:/var/local/geoserver --name=geoserver oscarfonts/geoserver
+  - docker run -d -p 8080:8080 oscarfonts/geoserver
 
 r:
   - oldrel
