adding virtualtable components #17

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(GSStyle)
 export(GSStyleManager)
 export(GSUtils)
 export(GSVersion)
+export(GSVirtualTableGeometry)
+export(GSVirtualTableParameter)
 export(GSWorkspace)
 export(GSWorkspaceManager)
 import(XML)
