--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(GSStyle)
 export(GSStyleManager)
 export(GSUtils)
 export(GSVersion)
+export(GSVirtualTable)
 export(GSVirtualTableGeometry)
 export(GSVirtualTableParameter)
 export(GSWorkspace)
