--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: geosapi
 Type: Package
 Title: GeoServer REST API R Interface
-Version: 0.2
+Version: 0.2-0
 Date: 2017-03-05
 Author: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
