--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,15 @@ r_packages:
   - httr
   - XML
   - testthat
+  -covr
 
 r_check_args: --as-cran
 
 after_script:
  - ./travis-tool.sh dump_logs
+ 
+after_success:
+ - Rscript -e 'library(covr); codecov()'
 
 notifications:
   email:
