--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ export(GSDimension)
 export(GSFeatureDimension)
 export(GSFeatureType)
 export(GSLayer)
+export(GSLayerGroup)
 export(GSManager)
 export(GSMetadataLink)
 export(GSNamespace)
 export(GSNamespaceManager)
+export(GSPublishable)
 export(GSRESTEntrySet)
 export(GSRESTResource)
 export(GSResource)
