try to configure docker-postgis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
   - docker
 
 before_install:
+  - docker run --name postgis -e POSTGRES_PASSWORD=geoserver -d mdillon/postgis
+  - docker run -it --link postgis:postgres --rm postgres
+  - sh -c 'exec psql -h "$POSTGRES_PORT_5432_TCP_ADDR" -p "$POSTGRES_PORT_5432_TCP_PORT" -U postgres'
   - docker pull oscarfonts/geoserver
   - docker run -d -p 8080:8080 oscarfonts/geoserver
 
