--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geosapi
 Type: Package
 Title: GeoServer REST API R Interface
-Version: 0.2-0
-Date: 2017-12-01
+Version: 0.3-0
+Date: 2018-02-21
 Author: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Description: Provides an R interface to the GeoServer REST API, allowing to upload 
@@ -18,3 +18,4 @@ License: MIT + file LICENSE
 URL: https://github.com/eblondel/geosapi/wiki, http://geoserver.org/
 BugReports: https://github.com/eblondel/geosapi/issues
 LazyLoad: yes
+RoxygenNote: 6.0.1
