--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,6 @@ cache: packages
 services:
   - docker
 
-before_install:
-  - docker pull kartoza/postgis
-  - docker run -d --name="postgis" kartoza/postgis
-  - docker pull oscarfonts/geoserver:2.15.2
-  - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
-
 r:
   #- oldrel
   - release
@@ -26,6 +20,31 @@ r_packages:
   - covr
 
 r_check_args: --as-cran
+
+
+matrix:
+  include:
+  - name: "GeoServer 2.16.0"
+    before_install:
+    - docker pull kartoza/postgis
+    - docker run -d --name="postgis" kartoza/postgis
+    - docker pull oscarfonts/geoserver:latest
+    - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
+    r: latest
+  - name: "GeoServer 2.15.2"
+    before_install:
+    - docker pull kartoza/postgis
+    - docker run -d --name="postgis" kartoza/postgis
+    - docker pull oscarfonts/geoserver:2.15.2
+    - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
+    r: latest
+  - name: "GeoServer 2.14.4"
+    before_install:
+    - docker pull kartoza/postgis
+    - docker run -d --name="postgis" kartoza/postgis
+    - docker pull oscarfonts/geoserver:2.14.4
+    - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
+    r: latest
 
 after_script:
  - ./travis-tool.sh dump_logs
