--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ language: R
 sudo: required
 cache: packages
 
-services:
-  - docker
-
 r:
   #- oldrel
   - release
@@ -25,26 +22,26 @@ r_check_args: --as-cran
 matrix:
   include:
   - name: "GeoServer 2.16.0"
-    script:
+    services: docker
+    before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
     - docker pull oscarfonts/geoserver:latest
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
-    r: latest
   - name: "GeoServer 2.15.2"
-    script:
+    services: docker
+    before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
     - docker pull oscarfonts/geoserver:2.15.2
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
-    r: latest
   - name: "GeoServer 2.14.4"
-    script:
+    services: docker
+    before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
     - docker pull oscarfonts/geoserver:2.14.4
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
-    r: latest
 
 after_script:
  - ./travis-tool.sh dump_logs
