--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,5 @@ License: MIT + file LICENSE
 URL: https://github.com/eblondel/geosapi/wiki, http://geoserver.org/
 BugReports: https://github.com/eblondel/geosapi/issues
 LazyLoad: yes
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
+Roxygen: list(r6 = FALSE)
