#47 geopackage datastore support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GSDataStoreManager)
 export(GSDimension)
 export(GSFeatureDimension)
 export(GSFeatureType)
+export(GSGeoPackageDataStore)
 export(GSLayer)
 export(GSLayerGroup)
 export(GSManager)
