--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,5 +35,6 @@ export(GSWorkspaceManager)
 export(GSWorkspaceSettings)
 import(XML)
 import(httr)
+import(keyring)
 importFrom(R6,R6Class)
 importFrom(openssl,base64_encode)
