--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ matrix:
   include:
   - name: "GeoServer 2.17.0"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -30,6 +33,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.16.3"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -37,6 +43,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.15.3"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -44,6 +53,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.14.4"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -51,6 +63,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.13.4"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -58,6 +73,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.12.4"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -65,6 +83,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.11.5"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -72,6 +93,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.10.5"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -79,6 +103,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.9.4"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
@@ -86,6 +113,9 @@ matrix:
     - docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
   - name: "GeoServer 2.8.5"
     services: docker
+    apt_packages:
+      - libxml2-dev
+      - libsodium-dev
     before_install:
     - docker pull kartoza/postgis
     - docker run -d --name="postgis" kartoza/postgis
