--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -34,7 +34,7 @@ jobs:
           docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver
       #R Set-up
       - name: Set up R ${{ matrix.config.r }}
-        uses: r-lib/actions/setup-r@ffe45a39586f073cc2e9af79c4ba563b657dc6e3
+        uses: r-lib/actions/setup-r@v1
         with:
           r-version: ${{ matrix.config.r }}
       #Install dependencies
