--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -16,12 +16,12 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.config.os }} | (${{ matrix.config.r }})
+    name: ${{ matrix.config.os }} | R ${{ matrix.config.r }} | GeoServer ${{ matrix.config.geoserver }}
     runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
         config:
-          - {os: ubuntu-20.04, r: 'release', geoserver: '2.16.0', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-20.04, r: '3.6.3', geoserver: '2.16.0', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
     steps:
       - uses: actions/checkout@v2
       
@@ -39,10 +39,9 @@ jobs:
           r-version: ${{ matrix.config.r }}
       #Install dependencies
       - name: Install dependencies
-        run: |
-          install.packages(c("remotes", "rcmdcheck"))
-          remotes::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
-      - name: Check
-        run: rcmdcheck::rcmdcheck(args = "--as-cran", error_on = "error")
-        shell: Rscript {0}
+        uses: r-lib/actions/setup-r-dependencies@v1
+      #Check R Package
+      - name: Check R package
+        uses: r-lib/actions/check-r-package@check-r-package
+        with:
+          artifact-name: ${{ matrix.config.os }}_r-${{ matrix.config.r }}_geoserver-${{matrix.config.geoserver}}-results
