--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -1,12 +1,6 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-#
-# See https://github.com/r-lib/actions/tree/master/examples#readme for
-# additional example workflows available for the R community.
+# Build
 
-name: R-CMD-check
+name: R CMD check
 
 on:
   push:
@@ -43,6 +37,12 @@ jobs:
       #Install dependencies
       - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v1
+        with:
+          extra-packages: covr
+      #Test code coverage
+      - name: Test code coverage
+      run: covr::codecov()
+      shell: Rscript {0}
       #Check R Package
       - name: Check R package
         uses: r-lib/actions/check-r-package@check-r-package
