--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -1,6 +1,6 @@
 # Build
 
-name: R CMD check
+name: Build
 
 on:
   push:
@@ -41,8 +41,8 @@ jobs:
           extra-packages: covr
       #Test code coverage
       - name: Test code coverage
-      run: covr::codecov()
-      shell: Rscript {0}
+        run: covr::codecov()
+        shell: Rscript {0}
       #Check R Package
       - name: Check R package
         uses: r-lib/actions/check-r-package@check-r-package
