--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.config.os }} | R ${{ matrix.config.r }} | GeoServer ${{ matrix.config.geoserver }}
+    name: R ${{ matrix.config.r }} | GeoServer ${{ matrix.config.geoserver }} | ${{ matrix.config.os }}
     runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
@@ -54,4 +54,4 @@ jobs:
       - name: Check R package
         uses: r-lib/actions/check-r-package@check-r-package
         with:
-          artifact-name: ${{ matrix.config.os }}_r-${{ matrix.config.r }}_geoserver-${{matrix.config.geoserver}}-results
+          artifact-name: geosapi_r-${{ matrix.config.r }}_geoserver-${{matrix.config.geoserver}}_${{ matrix.config.os }}-results
