--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Provides an R interface to the GeoServer REST API, allowing to uplo
  The package currently supports all CRUD (Create,Read,Update,Delete) operations
  on GeoServer workspaces, namespaces, datastores (stores of vector data), featuretypes,
  layers, styles, as well as vector data upload operations. For more information about 
- the GeoServer REST API, see <http://docs.geoserver.org/stable/en/user/rest/>.
+ the GeoServer REST API, see <https://docs.geoserver.org/stable/en/user/rest/>.
 Depends: R (>= 3.1.0)
 Imports: R6, openssl, httr, XML, keyring
 Suggests: testthat, roxygen2, covr
