#50 GS system status impl + Shiny monitor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(GSServiceManager)
 export(GSServiceSettings)
 export(GSShapefileDataStore)
 export(GSShapefileDirectoryDataStore)
+export(GSShinyMonitor)
 export(GSStyle)
 export(GSStyleManager)
 export(GSUtils)
@@ -38,3 +39,5 @@ import(httr)
 import(keyring)
 importFrom(R6,R6Class)
 importFrom(openssl,base64_encode)
+importFrom(readr,read_csv)
+importFrom(readr,write_csv)
