--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,11 @@
 export(GSAbstractCoverageStore)
 export(GSAbstractDBDataStore)
 export(GSAbstractDataStore)
-export(GSAbstractDataStoreManager)
 export(GSAbstractStore)
 export(GSArcGridCoverageStore)
+export(GSCoverage)
 export(GSCoverageStoreManager)
+export(GSDataStoreManager)
 export(GSDimension)
 export(GSFeatureDimension)
 export(GSFeatureType)
