#31 support for CoverageView

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(GSAbstractDataStore)
 export(GSAbstractStore)
 export(GSArcGridCoverageStore)
 export(GSCoverage)
+export(GSCoverageBand)
 export(GSCoverageStoreManager)
+export(GSCoverageView)
 export(GSDataStoreManager)
 export(GSDimension)
 export(GSFeatureDimension)
@@ -14,6 +16,7 @@ export(GSFeatureType)
 export(GSGeoPackageDataStore)
 export(GSGeoTIFFCoverageStore)
 export(GSImageMosaicCoverageStore)
+export(GSInputCoverageBand)
 export(GSLayer)
 export(GSLayerGroup)
 export(GSManager)
