--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(GSVirtualTableParameter)
 export(GSWorkspace)
 export(GSWorkspaceManager)
 export(GSWorkspaceSettings)
+export(GSWorldImageCoverageStore)
 import(XML)
 import(httr)
 import(keyring)
