moving layer/layergroup methods in a GSLayerManager as not specific to datastore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(GSImageMosaicCoverageStore)
 export(GSInputCoverageBand)
 export(GSLayer)
 export(GSLayerGroup)
+export(GSLayerManager)
 export(GSManager)
 export(GSMetadataLink)
 export(GSNamespace)
