--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -15,19 +15,8 @@ jobs:
     strategy:
       matrix:
         config:
-          - {os: ubuntu-20.04,   r: '4.0.5',  geoserver: 'latest', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.19.2', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.18.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.17.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.16.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.15.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.14.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.13.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.12.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.11.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.10.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.9.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          #- {os: ubuntu-20.04,   r: '4.0.5',  geoserver: '2.8.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-latest,  r: 'release', geoserver: 'latest'}
+          - {os: ubuntu-latest,  r: 'devel', geoserver: 'latest'}
     steps:
       - uses: actions/checkout@v2
       #Docker Geoserver set-up
@@ -38,12 +27,14 @@ jobs:
           docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver:${{ matrix.config.geoserver}}
       #R Set-up
       - name: Set up R ${{ matrix.config.r }}
-        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
       #Install dependencies
       - name: Install dependencies
-        uses: r-lib/actions/setup-r-dependencies@v1
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::XML
       #Check R Package
       - name: Check R package
         uses: r-lib/actions/check-r-package@check-r-package
