--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,4 @@ URL: https://github.com/eblondel/geosapi/wiki, https://geoserver.org/
 BugReports: https://github.com/eblondel/geosapi/issues
 LazyLoad: yes
 RoxygenNote: 7.1.0
+VignetteBuilder: knitr
