--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -1,6 +1,7 @@
 # Build
-
-name: Build
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+name: R-CMD-check
 
 on:
   push:
@@ -15,28 +16,41 @@ jobs:
     strategy:
       matrix:
         config:
-          - {os: ubuntu-latest,  r: 'release', geoserver: 'latest'}
-          - {os: ubuntu-latest,  r: 'devel', geoserver: 'latest'}
+          - {os: macOS-latest,   r: 'release'}
+          - {os: windows-latest, r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
     steps:
       - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-pandoc@v2
+      
       #Docker Geoserver set-up
       - name: Set up GeoServer ${{ matrix.config.geoserver }}
         run: |
           docker pull kartoza/postgis
           docker run -d --name="postgis" kartoza/postgis
           docker run --link postgis:postgis -d -p 8080:8080 oscarfonts/geoserver:${{ matrix.config.geoserver}}
+      
       #R Set-up
       - name: Set up R ${{ matrix.config.r }}
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: true
+      
       #Install dependencies
       - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::XML
+          extra-packages: any::rcmdcheck, any::XML
+          needs: check
+          cache-version: 5
+      
       #Check R Package
       - name: Check R package
-        uses: r-lib/actions/check-r-package@check-r-package
+        uses: r-lib/actions/check-r-package@v2
         with:
+          upload-snapshots: true
           artifact-name: geosapi_r-${{ matrix.config.r }}_geoserver-${{matrix.config.geoserver}}_${{ matrix.config.os }}-results
