--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -16,9 +16,9 @@ jobs:
     strategy:
       matrix:
         config:
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release', geoserver: 'latest'}
+          - {os: ubuntu-latest,   r: 'release', geoserver: 'latest'}
+          - {os: ubuntu-latest,   r: 'oldrel-1', geoserver: 'latest'}
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-pandoc@v2
