support #62 move from XML to xml2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(GSLayerGroup)
 export(GSLayerManager)
 export(GSManager)
 export(GSMetadataLink)
+export(GSMonitorManager)
 export(GSNamespace)
 export(GSNamespaceManager)
 export(GSOracleNGDataStore)
@@ -46,9 +47,9 @@ export(GSWorkspace)
 export(GSWorkspaceManager)
 export(GSWorkspaceSettings)
 export(GSWorldImageCoverageStore)
-import(XML)
 import(httr)
 import(keyring)
+import(xml2)
 importFrom(R6,R6Class)
 importFrom(openssl,base64_encode)
 importFrom(readr,read_csv)
