--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geosapi
 Type: Package
 Title: GeoServer REST API R Interface
-Version: 0.6-7
-Date: 2023-10-04
+Version: 0.7
+Date: 2024-01-26
 Authors@R: c(person("Emmanuel", "Blondel", role = c("aut", "cre"), email = "emmanuel.blondel1@gmail.com", comment = c(ORCID = "0000-0002-5870-5762")))
 Maintainer: Emmanuel Blondel <emmanuel.blondel1@gmail.com>
 Description: Provides an R interface to the GeoServer REST API, allowing to upload 
@@ -12,8 +12,8 @@ Description: Provides an R interface to the GeoServer REST API, allowing to uplo
  layers, styles, as well as vector data upload operations. For more information about 
  the GeoServer REST API, see <https://docs.geoserver.org/stable/en/user/rest/>.
 Depends: R (>= 3.1.0)
-Imports: R6, openssl, httr, XML, keyring, readr
-Suggests: testthat, roxygen2, covr, shiny, knitr, markdown
+Imports: R6, openssl, httr, xml2, keyring, readr
+Suggests: testthat, waldo, roxygen2, shiny, knitr, markdown
 License: MIT + file LICENSE
 URL: https://github.com/eblondel/geosapi, https://eblondel.github.io/geosapi/, https://geoserver.org/
 BugReports: https://github.com/eblondel/geosapi/issues
