--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(GSWorkspaceSettings)
 export(GSWorldImageCoverageStore)
 import(httr)
 import(keyring)
+import(magrittr)
 import(xml2)
 importFrom(R6,R6Class)
 importFrom(openssl,base64_encode)
