--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(GSWorkspace)
 export(GSWorkspaceManager)
 export(GSWorkspaceSettings)
 export(GSWorldImageCoverageStore)
+import(cli)
 import(httr)
 import(keyring)
 import(magrittr)
