--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -47,7 +47,7 @@ jobs:
       #Install dependencies on Linux
       - name: Install dependencies on Linux
         if: runner.os == 'Linux'
-        run: sudo apt-get install -y make libsodium-dev libicu-dev libxml2-dev libssl-dev pandoc librdf0-dev libnode-dev libcurl4-gnutls-dev
+        run: sudo apt-get install -y make libsodium-dev libicu-dev libxml2-dev libssl-dev pandoc librdf0-dev libnode-dev libcurl4-gnutls-dev libsecret-1-dev
       - name: Install dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
