#76 GSAccessControlListManager + methods for catalog mode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GSAbstractCoverageStore)
 export(GSAbstractDBDataStore)
 export(GSAbstractDataStore)
 export(GSAbstractStore)
+export(GSAccessControlListManager)
 export(GSArcGridCoverageStore)
 export(GSCoverage)
 export(GSCoverageBand)
