#76 Access control List (ACL) manager

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(GSInputCoverageBand)
 export(GSLayer)
 export(GSLayerGroup)
 export(GSLayerManager)
+export(GSLayerRule)
 export(GSManager)
 export(GSMetadataLink)
 export(GSMonitorManager)
@@ -32,7 +33,10 @@ export(GSPublishable)
 export(GSRESTEntrySet)
 export(GSRESTResource)
 export(GSResource)
+export(GSRestRule)
+export(GSRule)
 export(GSServiceManager)
+export(GSServiceRule)
 export(GSServiceSettings)
 export(GSShapefileDataStore)
 export(GSShapefileDirectoryDataStore)
